# Keep-board-App

./: .gitignore  README.md  build-release.bat  desktop-build-release.bat  desktop-dev.bat  desktop-run-built.bat  index.html  package-lock.json  package.json  run-built-app.bat  run_desktop.bat  run_desktop_with_logs.bat  start-desktop.bat  start.bat  web-dev.bat
.github/workflows/: release.yml
docs/: DISTRIBUTION_POLICY.md
scripts/windows/: desktop-build-release.bat  desktop-dev.bat  desktop-run-built.bat  web-dev.bat
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: nsis-hooks.nsh
