[package]
name = "keep-board"
version = "0.2.8"
description = "Keep-style hierarchical board app"
authors = ["Keep Board"]
edition = "2021"

[lib]
name = "keep_board_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
